[tool.poetry]
name = "python-beam-example"
version = "0.1.0"
description = ""
authors = ["david <david@doit-intl.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-beam = {extras = ["gcp"], version = "^2.23.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
